@@ -2,12 +2,10 @@ package com.joelcrosby.fluxpylons.compat.jei.category;
 
 import com.joelcrosby.fluxpylons.FluxPylons;
 import com.joelcrosby.fluxpylons.FluxPylonsBlocks;
-import com.joelcrosby.fluxpylons.compat.jei.FluxPylonsJeiPlugin;
 import com.joelcrosby.fluxpylons.machine.WasherGui;
 import com.joelcrosby.fluxpylons.recipe.WasherRecipe;
-import com.mojang.blaze3d.vertex.PoseStack;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.forge.ForgeTypes;
+import mezz.jei.api.neoforge.NeoForgeTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
@@ -17,25 +15,25 @@ import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
-import org.jetbrains.annotations.NotNull;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.function.Supplier;
 
-public class WashingCategory implements IRecipeCategory<WasherRecipe> {
+import static com.joelcrosby.fluxpylons.FluxPylonsRecipes.FluxPylonsRecipeTypes.WASHING;
+
+public class WashingCategory implements IRecipeCategory<RecipeHolder<WasherRecipe>> {
     private final IDrawable background;
     private final IDrawable icon;
-    
-    @SuppressWarnings("FieldCanBeLocal")
     private final IDrawable slotDrawable;
-    
-    @SuppressWarnings("FieldCanBeLocal")
     private final IDrawable arrow;
     
-    @SuppressWarnings("rawtypes")
-    public static final RecipeType RECIPE_TYPE = new RecipeType<>(FluxPylonsJeiPlugin.WASHING_UID, WasherRecipe.class);
+    public static final Supplier<RecipeType<RecipeHolder<WasherRecipe>>> RECIPE_TYPE = RecipeType.createFromDeferredVanilla(WASHING);
 
     public WashingCategory(IGuiHelper guiHelper) {
         background = guiHelper.drawableBuilder(WasherGui.TEXTURE, 40, 16, 132, 53).build();
@@ -44,10 +42,9 @@ public class WashingCategory implements IRecipeCategory<WasherRecipe> {
         arrow = guiHelper.drawableBuilder(WasherGui.TEXTURE, 176, 0, 22, 15).buildAnimated(200, IDrawableAnimated.StartDirection.LEFT, false);
     }
 
-    @SuppressWarnings("rawtypes")
     @Override
-    public @NotNull RecipeType getRecipeType(){
-        return RECIPE_TYPE;
+    public RecipeType<RecipeHolder<WasherRecipe>> getRecipeType(){
+        return RECIPE_TYPE.get();
     }
     
     @Override
@@ -66,25 +63,35 @@ public class WashingCategory implements IRecipeCategory<WasherRecipe> {
     }
 
     @Override
-    public void draw(WasherRecipe recipe, IRecipeSlotsView recipeSlotsView, PoseStack matrixStack, double mouseX, double mouseY) {
-        arrow.draw(matrixStack, 49, 18);
+    public void draw(RecipeHolder<WasherRecipe> recipeHolder, IRecipeSlotsView recipeSlotsView, GuiGraphics gui, double mouseX, double mouseY) {
+        arrow.draw(gui, 49, 18);
     }
     
     @Override
-    public void setRecipe(IRecipeLayoutBuilder recipeLayout, WasherRecipe recipe, IFocusGroup focusGroup) {
+    public void setRecipe(IRecipeLayoutBuilder recipeLayout, RecipeHolder<WasherRecipe> recipeHolder, IFocusGroup focusGroup) {
+        var recipe = recipeHolder.value();
+
         var inputSlot = recipeLayout.addSlot(RecipeIngredientRole.INPUT, 26, 19);
         inputSlot.setSlotName(Component.translatable("terms.fluxpylons.input_slot").getString());
-        inputSlot.addIngredients(VanillaTypes.ITEM_STACK, Arrays.stream(recipe.inputItems.get(0).getItems()).toList());
+        inputSlot.addIngredients(VanillaTypes.ITEM_STACK, Arrays.stream(recipe.ingredients.getFirst().getItems()).toList());
 
         var fluidSlot = recipeLayout.addSlot(RecipeIngredientRole.INPUT, 2, 3);
         fluidSlot.setSlotName(Component.translatable("terms.fluxpylons.input_slot").getString());
-        fluidSlot.addIngredients(ForgeTypes.FLUID_STACK, Arrays.stream(recipe.inputFluids.get(0).getFluids()).toList());
+        fluidSlot.addIngredients(NeoForgeTypes.FLUID_STACK, Arrays.stream(recipe.fluidIngredients.getFirst().getStacks()).toList());
         fluidSlot.setFluidRenderer(10_000, true, 16, 47);
 
         for (var i = 0; i < recipe.outputItems.size(); i++) {
             var handler = recipeLayout.addSlot(RecipeIngredientRole.OUTPUT, 87 + i * 18, 19);
             handler.setSlotName(Component.translatable("terms.fluxpylons.output_slot").getString());
-            handler.addIngredients(VanillaTypes.ITEM_STACK, List.of(recipe.outputItems.get(i)));
+            handler.addIngredients(VanillaTypes.ITEM_STACK, List.of(recipe.outputItems.get(i).getItemStack()));
         }
+    }
+
+    public static List<RecipeHolder<WasherRecipe>> getAllRecipes() {
+        if (Minecraft.getInstance().level != null) {
+            return Minecraft.getInstance().level.getRecipeManager().getAllRecipesFor(WASHING.get());
+        }
+
+        return List.of();
     }
 }
